[gd_scene load_steps=25 format=2]

[ext_resource path="res://Vegetation/Editor/ClickDragCamera.gd" type="Script" id=1]
[ext_resource path="res://Vegetation/Editor/DensityClassDropdown.gd" type="Script" id=2]
[ext_resource path="res://Vegetation/Editor/GroupPlantList.gd" type="Script" id=3]
[ext_resource path="res://Vegetation/Editor/GroupPanel.gd" type="Script" id=4]
[ext_resource path="res://Vegetation/Editor/GroupList.gd" type="Script" id=5]
[ext_resource path="res://Vegetation/Editor/GroupDetails.gd" type="Script" id=6]
[ext_resource path="res://UI/Fonts/Text.tres" type="FontFile" id=7]
[ext_resource path="res://Vegetation/Editor/PlantSelection.gd" type="Script" id=8]
[ext_resource path="res://Vegetation/Editor/PlantPanel.gd" type="Script" id=9]
[ext_resource path="res://Vegetation/Editor/PlantFilter.gd" type="Script" id=10]
[ext_resource path="res://Vegetation/Editor/PlantDetails.gd" type="Script" id=11]
[ext_resource path="res://Vegetation/Editor/PlantList.gd" type="Script" id=12]
[ext_resource path="res://Vegetation/Editor/SaveButton.gd" type="Script" id=13]
[ext_resource path="res://Vegetation/Editor/TextureOptionButton.gd" type="Script" id=14]
[ext_resource path="res://Vegetation/Editor/VisualizationUI.gd" type="Script" id=15]
[ext_resource path="res://Vegetation/Editor/VegetationEditor.gd" type="Script" id=16]
[ext_resource path="res://World/Environment/WorldEnvironment.tscn" type="PackedScene" id=17]
[ext_resource path="res://Vegetation/Editor/Visualization.gd" type="Script" id=18]
[ext_resource path="res://Vegetation/Editor/GroundShader.gdshader" type="Shader" id=19]
[ext_resource path="res://Vegetation/Editor/PopupButton.gd" type="Script" id=20]
[ext_resource path="res://Vegetation/Editor/ViewSettings/TextureSettingsDialog.tscn" type="PackedScene" id=21]
[ext_resource path="res://Vegetation/Editor/ViewSettings/ViewSettingsDialog.tscn" type="PackedScene" id=22]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 500, 500 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 19 )
shader_param/size_m = null
shader_param/texture_size_m = null
shader_param/normal_scale = 1.0
shader_param/is_roughness_increase = null
shader_param/roughness_scale = 0.0
shader_param/is_specular_increase = null
shader_param/specular_scale = 0.0
shader_param/is_ao_increase = null
shader_param/ao_scale = 0.0
shader_param/has_distance_tex = false
shader_param/distance_tex_start = null
shader_param/distance_texture_size_m = null

[node name="VegetationEditor" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantPanel" type="VSplitContainer" parent="."]
offset_right = 250.0
offset_bottom = 1080.0
split_offset = 350
script = ExtResource( 9 )

[node name="PlantSelection" type="VBoxContainer" parent="PlantPanel"]
offset_right = 250.0
offset_bottom = 544.0
script = ExtResource( 8 )

[node name="FilterContainer" type="HBoxContainer" parent="PlantPanel/PlantSelection"]
offset_right = 250.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="PlantPanel/PlantSelection/FilterContainer"]
offset_top = 6.0
offset_right = 40.0
offset_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "Filter:"

[node name="PlantFilter" type="OptionButton" parent="PlantPanel/PlantSelection/FilterContainer"]
offset_left = 48.0
offset_right = 250.0
offset_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 10 )

[node name="PlantList" type="ItemList" parent="PlantPanel/PlantSelection"]
offset_top = 44.0
offset_right = 250.0
offset_bottom = 544.0
minimum_size = Vector2( 250, 150 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
fixed_column_width = 500
fixed_icon_size = Vector2( 100, 100 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantDetails" type="PanelContainer" parent="PlantPanel"]
offset_top = 568.0
offset_right = 250.0
offset_bottom = 1080.0
script = ExtResource( 11 )

[node name="DetailList" type="VBoxContainer" parent="PlantPanel/PlantDetails"]
offset_left = 14.0
offset_top = 14.0
offset_right = 236.0
offset_bottom = 498.0

[node name="ID" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_right = 222.0
offset_bottom = 23.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/ID"]
offset_right = 20.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 7 )
text = "ID:"

[node name="Label" type="Label" parent="PlantPanel/PlantDetails/DetailList/ID"]
offset_left = 28.0
offset_right = 28.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 7 )

[node name="Name" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 31.0
offset_right = 222.0
offset_bottom = 74.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/Name"]
offset_top = 10.0
offset_right = 46.0
offset_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="PlantPanel/PlantDetails/DetailList/Name"]
offset_left = 54.0
offset_right = 222.0
offset_bottom = 43.0
minimum_size = Vector2( 150, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinHeight" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 82.0
offset_right = 222.0
offset_bottom = 125.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/MinHeight"]
offset_top = 10.0
offset_right = 81.0
offset_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Min Height:"

[node name="LineEdit" type="LineEdit" parent="PlantPanel/PlantDetails/DetailList/MinHeight"]
offset_left = 89.0
offset_right = 222.0
offset_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHeight" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 133.0
offset_right = 222.0
offset_bottom = 176.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/MaxHeight"]
offset_top = 10.0
offset_right = 84.0
offset_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Max Height:"

[node name="LineEdit" type="LineEdit" parent="PlantPanel/PlantDetails/DetailList/MaxHeight"]
offset_left = 92.0
offset_right = 222.0
offset_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Density" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 184.0
offset_right = 222.0
offset_bottom = 227.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/Density"]
offset_top = 10.0
offset_right = 58.0
offset_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Density:"

[node name="LineEdit" type="LineEdit" parent="PlantPanel/PlantDetails/DetailList/Density"]
offset_left = 66.0
offset_right = 222.0
offset_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DensityClass" type="HBoxContainer" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 235.0
offset_right = 222.0
offset_bottom = 271.0

[node name="Prompt" type="Label" parent="PlantPanel/PlantDetails/DetailList/DensityClass"]
offset_top = 6.0
offset_right = 101.0
offset_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "Density Class:"

[node name="DensityClassDropdown" type="OptionButton" parent="PlantPanel/PlantDetails/DetailList/DensityClass"]
offset_left = 109.0
offset_right = 222.0
offset_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 2 )

[node name="SaveButton" type="Button" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 279.0
offset_right = 222.0
offset_bottom = 314.0
custom_fonts/font = ExtResource( 7 )
text = "Save"

[node name="HSeparator" type="HSeparator" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 322.0
offset_right = 222.0
offset_bottom = 330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroupButton" type="Button" parent="PlantPanel/PlantDetails/DetailList"]
offset_top = 338.0
offset_right = 222.0
offset_bottom = 373.0
custom_fonts/font = ExtResource( 7 )
text = "Add to current group >"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
offset_left = 274.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GroupPanel" type="VSplitContainer" parent="HSplitContainer"]
offset_right = 250.0
offset_bottom = 1080.0
split_offset = 450
script = ExtResource( 4 )

[node name="GroupList" type="ItemList" parent="HSplitContainer/GroupPanel"]
offset_right = 250.0
offset_bottom = 600.0
minimum_size = Vector2( 250, 150 )
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 5 )

[node name="GroupDetails" type="VSplitContainer" parent="HSplitContainer/GroupPanel"]
offset_top = 624.0
offset_right = 250.0
offset_bottom = 1080.0
script = ExtResource( 6 )

[node name="GroupAttributes" type="PanelContainer" parent="HSplitContainer/GroupPanel/GroupDetails"]
offset_right = 250.0
offset_bottom = 456.0

[node name="Attributes" type="VBoxContainer" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes"]
offset_left = 14.0
offset_top = 14.0
offset_right = 236.0
offset_bottom = 442.0

[node name="ID" type="HBoxContainer" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_right = 222.0
offset_bottom = 23.0

[node name="Prompt" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/ID"]
offset_right = 20.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 7 )
text = "ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/ID"]
offset_left = 28.0
offset_right = 28.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 7 )

[node name="Name" type="HBoxContainer" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 31.0
offset_right = 222.0
offset_bottom = 74.0

[node name="Prompt" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/Name"]
offset_top = 10.0
offset_right = 46.0
offset_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/Name"]
offset_left = 54.0
offset_right = 222.0
offset_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )

[node name="GroundTexture" type="HBoxContainer" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 82.0
offset_right = 222.0
offset_bottom = 118.0

[node name="Prompt" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/GroundTexture"]
offset_top = 6.0
offset_right = 116.0
offset_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "Ground Texture2D:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureOptionButton" type="OptionButton" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/GroundTexture"]
offset_left = 124.0
offset_right = 222.0
offset_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 14 )
vegetation_field_to_access = "ground_textures"

[node name="FadeTexture" type="HBoxContainer" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 126.0
offset_right = 222.0
offset_bottom = 162.0

[node name="Prompt" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/FadeTexture"]
offset_top = 6.0
offset_right = 96.0
offset_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "Fade Texture2D:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureOptionButton" type="OptionButton" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes/FadeTexture"]
offset_left = 104.0
offset_right = 222.0
offset_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 14 )
vegetation_field_to_access = "fade_textures"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 170.0
offset_right = 222.0
offset_bottom = 178.0

[node name="ListHeading" type="Label" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 186.0
offset_right = 222.0
offset_bottom = 209.0
custom_fonts/font = ExtResource( 7 )
text = "Plants:"

[node name="GroupPlantList" type="ItemList" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 217.0
offset_right = 222.0
offset_bottom = 385.0
minimum_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
fixed_icon_size = Vector2( 100, 100 )
script = ExtResource( 3 )

[node name="RemoveButton" type="Button" parent="HSplitContainer/GroupPanel/GroupDetails/GroupAttributes/Attributes"]
offset_top = 393.0
offset_right = 222.0
offset_bottom = 428.0
custom_fonts/font = ExtResource( 7 )
text = "Remove Selected"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
offset_left = 274.0
offset_right = 1646.0
offset_bottom = 1080.0

[node name="VisualizationUI" type="SubViewportContainer" parent="HSplitContainer/VBoxContainer"]
offset_right = 1372.0
offset_bottom = 994.0
minimum_size = Vector2( 1000, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraButtons" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/VisualizationUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="GroundViewButton" type="Button" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_right = 170.0
offset_bottom = 35.0
custom_fonts/font = ExtResource( 7 )
text = "Ground View (1.6m)"

[node name="CanopyViewButton" type="Button" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_top = 43.0
offset_right = 170.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 7 )
text = "Canopy View (20m)"

[node name="AirViewButton" type="Button" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_top = 86.0
offset_right = 170.0
offset_bottom = 121.0
custom_fonts/font = ExtResource( 7 )
text = "Aerial View (50m)"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_top = 129.0
offset_right = 170.0
offset_bottom = 137.0

[node name="TextureSettingsButton" type="Button" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_top = 145.0
offset_right = 170.0
offset_bottom = 180.0
custom_fonts/font = ExtResource( 7 )
text = "Texture2D Settings"
script = ExtResource( 20 )

[node name="TextureSettingsDialog" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons/TextureSettingsButton" instance=ExtResource( 21 )]

[node name="ViewSettingsButton" type="Button" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons"]
offset_top = 188.0
offset_right = 170.0
offset_bottom = 223.0
custom_fonts/font = ExtResource( 7 )
text = "View Settings"
script = ExtResource( 20 )

[node name="ViewSettingsDialog" parent="HSplitContainer/VBoxContainer/VisualizationUI/CameraButtons/ViewSettingsButton" instance=ExtResource( 22 )]

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/VBoxContainer/VisualizationUI"]
size = Vector2( 1372, 994 )
handle_input_locally = false
msaa = 1
render_target_update_mode = 3
shadow_atlas_size = 1024
shadow_atlas_quad_1 = 3
shadow_atlas_quad_2 = 4
shadow_atlas_quad_3 = 5

[node name="Visualization" type="Node3D" parent="HSplitContainer/VBoxContainer/VisualizationUI/SubViewport"]
script = ExtResource( 18 )

[node name="ClickDragCamera" type="Camera3D" parent="HSplitContainer/VBoxContainer/VisualizationUI/SubViewport/Visualization"]
transform = Transform3D( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 1.6, 0 )
fov = 50.0
far = 500.0
script = ExtResource( 1 )

[node name="GroundMesh" type="MeshInstance3D" parent="HSplitContainer/VBoxContainer/VisualizationUI/SubViewport/Visualization"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="WorldEnvironment" parent="HSplitContainer/VBoxContainer/VisualizationUI/SubViewport/Visualization" instance=ExtResource( 17 )]

[node name="UpdateVisButton" type="Button" parent="HSplitContainer/VBoxContainer"]
offset_top = 1002.0
offset_right = 1372.0
offset_bottom = 1037.0
custom_fonts/font = ExtResource( 7 )
text = "Update"

[node name="SaveButton" type="Button" parent="HSplitContainer/VBoxContainer"]
offset_top = 1045.0
offset_right = 1372.0
offset_bottom = 1080.0
custom_fonts/font = ExtResource( 7 )
text = "Save Configuration"
script = ExtResource( 13 )
